--- a/HTML/Blog.html
+++ b/HTML/Blog.html
@@ -23,7 +23,7 @@
 
                      
                     <div class="logo">
-                    <img src="Images/logo.png">
+                    <a href="index.html"><img src="Images/logo.png" alt="logo"></a>
                     </div>
                     <div class="socials">
                         <div class="sign_up"><a href="cart.html"><i class="fa-solid fa-cart-shopping fa-2x" href="#"></i>
