--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -23,7 +23,7 @@
 
                      
                     <div class="logo">
-                    <img src="Images/logo.png">
+                    <a href="index.html"><img src="Images/logo.png" alt="logo"></a>
                     </div>
                     <div class="socials">
                         <a>
