--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,7 +20,7 @@
                 <div class="content"></div>  
                  
                     <div class="logo">
-                    <img src="Images/logo.png" alt="logo">
+                    <a href="index.html"><img src="Images/logo.png" alt="logo"></a>
                     </div>
                     <div class="socials">
                         <div class="sign_up"><a href="cart.html"><i class="fa-solid fa-cart-shopping fa-2x" href="#"></i>
