--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -142,6 +142,8 @@
                 </div>
             </div>
             <div class="total_bottom">
+                <h3>Total</h3><br/>
+                <h3>$228.00</h3>
             </div>
             <div class="cartbottom">
                 <a href="#"><div class="button_b">Checkout</div></a>
